[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "retailcalendar"
version = "v0.0.2"
authors = [
  { name="Thiago Weidman", email="tw@weidman.com.br" },
]
description = "A package to handle NRF's 454 calendar (Retail Calendar)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["click"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.scripts]
454cal = "retailcalendar.cli:getcalendar"

[project.urls]
"Homepage" = "https://github.com/thig0w/454calendar"
"Bug Tracker" = "https://github.com/thig0w/454calendar/issues"
