[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "retailcalendar"
version = "1.0.0"
authors = [
  { name="Thiago Weidman", email="tw@weidman.com.br" },
]
description = "A package to handle NRF's 454 calendar (Retail Calendar)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["click", "rich", "pyyaml"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.scripts]
454cal = "retailcalendar.cli:get_calendar"

[tool.setuptools.package-data]
retailcalendar = ["*.yaml"]

[project.urls]
"Homepage" = "https://github.com/thig0w/454calendar"
"Bug Tracker" = "https://github.com/thig0w/454calendar/issues"

[dependency-groups]
dev = [
    "pre-commit",
    "pydocstyle",
    "pytest",
    "pytest-clarity",
    "pytest-dotenv",
    "ruff",
    "httpx",
    "isort",
    "sourcery",
    "tox",
    "tox-uv",
]

[tool.tox]
legacy_tox_ini = """
[tox]
env_list = py310, py311, py312, py313, py314
requires = tox-uv >= 1
parallel = auto

[testenv]
runner = uv-venv-lock-runner
setenv = UV_LINK_MODE=copy
commands = pytest
"""

[tool.pytest.ini_options]
addopts = "-ra --showlocals --verbose"
norecursedirs = [".git", ".pytest_cache", ".idea", "migrations", ".venv"]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore:function ham\\(\\) is deprecated:DeprecationWarning",
]
